src/objects/RegularSpare__c.object
<CustomObject>
    <fields>
        <fullName>ChargeSituation__c</fullName>
        <label>收费情况</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>免费维修</fullName>
                </value>
                <value>
                    <fullName>收费维修</fullName>
                </value>
                <value>
                    <fullName>公司保内</fullName>
                </value>
                <value>
                    <fullName>原厂保内</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConsigneeContactNumber__c</fullName>
        <label>收货人联系电话</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DateOfShipment__c</fullName>
        <label>发货日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveryNumber__c</fullName>
        <label>返库快递单号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceName1__c</fullName>
        <formula>SparePartNumber1__r.ChineseDescription__c</formula>
        <label>备件名称1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceName2__c</fullName>
        <formula>SparePartNumber__r.ChineseDescription__c</formula>
        <label>备件名称2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviceName3__c</fullName>
        <formula>SparePartNumber3__r.ChineseDescription__c</formula>
        <label>备件名称3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeviseSerialNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>设备序列号</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Field2__c</field>
                <operation>equals</operation>
                <valueField>Equipment__c.customer__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipLabel>CustomObject25</relationshipLabel>
        <relationshipName>DeviseSerialNumber</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>服务请求（常规）</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>常规备件申请</relationshipLabel>
        <relationshipName>CustomObject25</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>客户</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>常规备件申请</relationshipLabel>
        <relationshipName>CustomObject25</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NatureOfApplication__c</fullName>
        <label>申请性质</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>保外备件销售</fullName>
                </value>
                <value>
                    <fullName>维修测试</fullName>
                </value>
                <value>
                    <fullName>保内维修更换</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OldSparePartsReturnStatus__c</fullName>
        <label>旧备件返库状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D待返库</fullName>
                </value>
                <value>
                    <fullName>F返库中</fullName>
                </value>
                <value>
                    <fullName>Y已返库</fullName>
                </value>
                <value>
                    <fullName>W无需返回旧件</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutboundSerial1__c</fullName>
        <label>出库序列号1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutboundSerial2__c</fullName>
        <label>出库序列号2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutboundSerial3__c</fullName>
        <label>出库序列号3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutboundSparePartsLibrary__c</fullName>
        <label>出库备件库</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>技术部备件库</fullName>
                </value>
                <value>
                    <fullName>上海技术备件库</fullName>
                </value>
                <value>
                    <fullName>广州技术备件库</fullName>
                </value>
                <value>
                    <fullName>济南技术备件库</fullName>
                </value>
                <value>
                    <fullName>西安技术备件库</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outbound__c</fullName>
        <label>出库快递单号</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity1__c</fullName>
        <label>数量1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity2__c</fullName>
        <label>数量2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity3__c</fullName>
        <label>数量3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReasonForApplication__c</fullName>
        <label>申请原因简述</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Receiver__c</fullName>
        <label>收货人</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionalAssistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>区域助理</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RegionalAssistant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RegionalTechnicalManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>区域技术经理</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RegionalTechnicalManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestArrivalTime__c</fullName>
        <label>计划使用时间或要求到货时间</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ReturnDate__c</fullName>
        <label>返库日期</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReturnLibrary__c</fullName>
        <label>返库备件库</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>技术部备件库</fullName>
                </value>
                <value>
                    <fullName>上海技术备件库</fullName>
                </value>
                <value>
                    <fullName>广州技术备件库</fullName>
                </value>
                <value>
                    <fullName>济南技术备件库</fullName>
                </value>
                <value>
                    <fullName>西安技术备件库</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReturnSerial1__c</fullName>
        <label>返库序列号1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnSerial2__c</fullName>
        <label>返库序列号2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReturnSerial3__c</fullName>
        <label>返库序列号3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <label>收货地址</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SparePartNumber1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件编号1</label>
        <referenceTo>SpareProduct__c</referenceTo>
        <relationshipLabel>CustomObject25</relationshipLabel>
        <relationshipName>CustomObject25</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SparePartNumber3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件编号3</label>
        <referenceTo>SpareProduct__c</referenceTo>
        <relationshipLabel>CustomObject25 (备件编号3)</relationshipLabel>
        <relationshipName>SparePartNumber3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SparePartNumber4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>备件编号4</label>
        <referenceTo>SpareProduct__c</referenceTo>
        <relationshipLabel>CustomObject25 (备件编号4)</relationshipLabel>
        <relationshipName>SparePartNumber4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SparePartStatus__c</fullName>
        <label>备件状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N待审批</fullName>
                </value>
                <value>
                    <fullName>A已审批</fullName>
                </value>
                <value>
                    <fullName>S已发货</fullName>
                </value>
                <value>
                    <fullName>Q缺货，补库备件未到货</fullName>
                </value>
                <value>
                    <fullName>Q缺货，标准配置库存外备件</fullName>
                </value>
                <value>
                    <fullName>B已到货</fullName>
                </value>
                <value>
                    <fullName>R已更换</fullName>
                </value>
                <value>
                    <fullName>W未使用</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SparePart__c</fullName>
        <label>备件申请审批状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>草稿</fullName>
                    <default>true</default>
                    <label>草稿</label>
                </value>
                <value>
                    <fullName>待审批</fullName>
                </value>
                <value>
                    <fullName>已审批</fullName>
                </value>
                <value>
                    <fullName>已拒绝</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SparePartsUseStatus__c</fullName>
        <label>备件使用状态</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>已使用</fullName>
                </value>
                <value>
                    <fullName>未用返库</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TechnicalServiceCenter__c</fullName>
        <label>技术服务中心</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>沈阳技术服务中心</fullName>
                </value>
                <value>
                    <fullName>北京技术服务 中心</fullName>
                </value>
                <value>
                    <fullName>济南技术服务中心</fullName>
                </value>
                <value>
                    <fullName>上海技术服务中心</fullName>
                </value>
                <value>
                    <fullName>广州技术服务中心</fullName>
                </value>
                <value>
                    <fullName>重庆技术服务中心</fullName>
                </value>
                <value>
                    <fullName>西安技术服务中心</fullName>
                </value>
                <value>
                    <fullName>香港技术服务中心</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalNumber__c</fullName>
        <label>总件数</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>厂商</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>海德堡</fullName>
                </value>
                <value>
                    <fullName>欧堡</fullName>
                </value>
                <value>
                    <fullName>光太激光</fullName>
                </value>
                <value>
                    <fullName>光太超声</fullName>
                </value>
                <value>
                    <fullName>徕卡</fullName>
                </value>
                <value>
                    <fullName>歌德</fullName>
                </value>
                <value>
                    <fullName>罗兰</fullName>
                </value>
                <value>
                    <fullName>兴和</fullName>
                </value>
                <value>
                    <fullName>海涅</fullName>
                </value>
                <value>
                    <fullName>瑞贝科</fullName>
                </value>
                <value>
                    <fullName>雷蒙</fullName>
                </value>
                <value>
                    <fullName>其他</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>常规备件申请</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <displayFormat>CGBJSQ-{YYYY}{MM}-{000000}</displayFormat>
        <label>常规备件申请编号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>常规备件申请</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>